force-app/main/default/objects/Account/fields/For_tables__c.field-meta.xml
<CustomField>
    <fullName>For_tables__c</fullName>
    <label>For tables</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Almirah</fullName>
            </value>
            <value>
                <fullName>Dining</fullName>
            </value>
            <value>
                <fullName>Chairs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>