force-app/main/default/objects/Account/fields/Product_Sub_Categories__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Categories__c</fullName>
    <description>showing subcategories of IT Products.</description>
    <inlineHelpText>All Categories</inlineHelpText>
    <label>Product Sub Categories</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Products__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Product_Sub_Category</valueSetName>
    </valueSet>
</CustomField>