force-app/main/default/objects/Account/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <label>IT Products</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>camera</fullName>
            </value>
            <value>
                <fullName>keyboard</fullName>
            </value>
            <value>
                <fullName>mouse</fullName>
            </value>
            <value>
                <fullName>hard drive</fullName>
            </value>
            <value>
                <fullName>Cable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>