force-app/main/default/objects/Account/fields/Sum_of_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Amount__c</fullName>
    <description>Amount of Oppurtunities</description>
    <inlineHelpText>Read Only Field to see the amount of Opps</inlineHelpText>
    <label>Sum of Amount</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>