force-app/main/default/objects/Account/fields/Table_sub_cateogory__c.field-meta.xml
<CustomField>
    <fullName>Table_sub_cateogory__c</fullName>
    <label>Table sub cateogory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>For_tables__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wood almirah</fullName>
            </value>
            <value>
                <fullName>Marble Almirah</fullName>
            </value>
            <value>
                <fullName>RAck almirah</fullName>
            </value>
            <value>
                <fullName>Plastic chair</fullName>
            </value>
            <value>
                <fullName>Steel chair</fullName>
            </value>
            <value>
                <fullName>Food table</fullName>
            </value>
            <value>
                <fullName>Eat table</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>