force-app/main/default/objects/Account/validationRules/For_Agriculture.validationRule-meta.xml
<ValidationRule>
    <fullName>For_Agriculture</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Industry, &quot;Agriculture&quot; ), ISBLANK( Fax ))</errorConditionFormula>
    <errorDisplayField>Fax</errorDisplayField>
    <errorMessage>Please fillup fax.</errorMessage>
</ValidationRule>